--- a/docs/Clase2.qmd
+++ b/docs/Clase2.qmd
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 ---
 title: "Clase 2"
 format: html
@@ -315,5 +315,5 @@ ggplot(data= Datos, aes(x= Years, y= Poblacion))+
 
 
 
-![HN Biology Investigation Academy](HN%20Cursos%20publicidad/HN%20Biology%20Inv%20large.jpg)
->>>>>>> 082fd59577c8fd42a960f68cb8c672c6e2b0e9ad
+![HN Biology Investigation Academy](HN Cursos publicidad/HN Biology Inv large.jpg)
+
