--- a/docs/Clase3b.qmd
+++ b/docs/Clase3b.qmd
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 ---
 title: "Clase 3: Regulación de Poblaciones y Estimadores de abundancia"
 format: html
@@ -305,5 +305,5 @@ Tipicamente se utilizan para estimar densidad de aves
 $$N = A{\sum x_i}/n\pi r^2$$
 
 
-![HN Biology Investigation Academy](HN%20Cursos%20publicidad/HN%20Biology%20Inv%20large.jpg)
->>>>>>> 082fd59577c8fd42a960f68cb8c672c6e2b0e9ad
+![HN Biology Investigation Academy](HN Cursos publicidad/HN Biology Inv large.jpg)
+
